# everyday-coding

./: .gitignore  README.md
Exercism/typescript/: space-age.ts
ProjectEuler/even-fibonacci-numbers/: README.md  even_fibonacci_numbers.cpp  even_fibonacci_numbers.h  even_fibonacci_numbers_test.cpp  main.cpp
ProjectEuler/large-sum/: LargeNumber.cpp  LargeSum.cpp  LargeSum.sln  LargeSum.vcxproj  LargeSum.vcxproj.filters  LargeSumTest.cpp  README.md
ProjectEuler/largest-palidrome-product/: README.md  largest_palidrome_product.cpp  largest_palidrome_product.h  largest_palidrome_product_test.cpp  main.cpp
ProjectEuler/largest-prime-factor/: README.md  largest_prime_factor.cpp  largest_prime_factor.h  largest_prime_factor_test.cpp  main.cpp
ProjectEuler/largest-product-in-a-series/: CMakeLists.txt  README.md  largest_product_in_a_series.h  largest_product_in_a_series_test.cpp
ProjectEuler/multiples-of-3-and-5/: README.md  main.cpp  multiples_of_3_and_5.cpp  multiples_of_3_and_5.h  multiples_of_3_and_5_test.cpp
ProjectEuler/nth-prime/: README.md  nth_prime.h  nth_prime_test.cpp
ProjectEuler/smallest-multiple/: README.md  smallest_multiple.h  smallest_multiple_test.cpp
ProjectEuler/special-pythagorean-triplet/: README.md  special_pythagorean_triplet.h  special_pythagorean_triplet_test.cpp
ProjectEuler/sum-square-difference/: README.md  sum_square_difference.h  sum_square_difference_test.cpp
ProjectEuler/summation-of-primes/: README.md  summation_of_primes.h  summation_of_primes_test.cpp
ProjectEuler/thousand-digit-fibonacci-number/: LargeFibonacci.h  (+6 more)
(+515 files in other folders)
